--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
+  },
+  "dependencies": {
+    "reset-css": "^5.0.1"
   }
 }
